ContainerNet configurations done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 server.port = 8080
-measurement.server.endpoint = ws://localhost:7800/mobiperf
+measurement.server.endpoint = ws://192.168.1.77:7800/mobiperf
