--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 server.port = 8080
 measurement.server.endpoint = ws://192.168.1.77:7800/mobiperf
+speed.test.server = 192.168.1.77
+
+mobiperf.device.id = D1
+mobiperf.schedule.file.path = /var/lib/schedule
