--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port = 8080
-measurement.server.endpoint = ws://192.168.1.77:7800/mobiperf
-speed.test.server = 192.168.1.77
+server.port = ${SERVER_PORT}
+measurement.server.endpoint = ${MEASUREMENT_SERVER_ENDPOINT}
+speed.test.server = ${SPEED_TEST_SERVER}
 
-mobiperf.device.id = D1
-mobiperf.schedule.file.path = /var/lib/schedule
+mobiperf.device.id = ${MOBIPERF_DEVICE_ID}
+mobiperf.schedule.file.path = ${MOBIPERF_SCHEDULE_FILE_PATH}
